[gd_scene load_steps=2 format=3 uid="uid://bdbib8np6c616"]

[ext_resource type="Script" path="res://src/ui/main_screen/resources/resource_ui.gd" id="1_tl7ra"]

[node name="ResourceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tl7ra")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer5"]
layout_mode = 2
text = "10"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HousingBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/MarginContainer"]
modulate = Color(0.572549, 0.635294, 0.752941, 1)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 3
show_percentage = false

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="FoodBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/MarginContainer2"]
modulate = Color(0.486275, 0.584314, 0.239216, 1)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 3
show_percentage = false

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="WaterBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/MarginContainer3"]
modulate = Color(0.203922, 0.435294, 0.772549, 1)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 3
show_percentage = false

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="AirBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/MarginContainer4"]
modulate = Color(0.866667, 0.556863, 0.556863, 1)
layout_mode = 2
size_flags_vertical = 1
value = 100.0
fill_mode = 3
show_percentage = false
